--- a/String operations.ipynb
+++ b/String operations.ipynb
@@ -324,6 +324,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'shill wlc to pythonthill wlc to pythonrhill wlc to python2'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1.join('str2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hill wlc to pythonwelcome to Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str1+str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hill wlc to pythonwelcome to Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str1+ '' +str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your nameSaurabh\n",
+      "Hiiii Saurabh Welcome to python\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1='Hiiii '\n",
+    "str3=' Welcome to python'\n",
+    "str2=input(\"Enter your name\")\n",
+    "print(str1+str2+str3)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your nameSaurabh\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'hii Saurabh Welcome to python'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name=input(\"Enter your name\")\n",
+    "'hii'+' '+name+' '+ \"Welcome to python\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
