--- a/Control Structure.ipynb
+++ b/Control Structure.ipynb
@@ -89,6 +89,188 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Home Work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am Not in if\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=10\n",
+    "if (i>15):\n",
+    "    print(\"10 is less than 15\")\n",
+    "else:\n",
+    "    print(\"I am Not in if\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if-else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i is greater than 15\n",
+      "i m in else Block\n",
+      "i m not in if and not in else Block\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=20;\n",
+    "if(i<15):\n",
+    "    print(\"i is smaller than 15\")\n",
+    "    print(\"i m in if Block\")\n",
+    "else:\n",
+    "    print(\"i is greater than 15\")\n",
+    "    print(\"i m in else Block\")\n",
+    "print(\"i m not in if and not in else Block\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "nested-if"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i is smaller than 15\n",
+      "i is smaller than 12 too\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=10\n",
+    "if(i == 10):\n",
+    "    if(i<15):\n",
+    "        print(\"i is smaller than 15\")\n",
+    "    if(i<12):\n",
+    "        print(\"i is smaller than 12 too\")\n",
+    "    else:\n",
+    "        print(\"i is greater than 15\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if-elif-else ladder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i is 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=20\n",
+    "if(i == 10):\n",
+    "    print(\"i is 10\")\n",
+    "elif ( i == 15):\n",
+    "    print(\"i is 15\")\n",
+    "elif ( i == 20):\n",
+    "    print(\"i is 20\")\n",
+    "else:\n",
+    "    print(\"i is not present\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Short Hand if statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i is less than 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=10\n",
+    "if i<15: print(\"i is less than 15\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Short Hand if-else statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=10\n",
+    "print(True) if i<15 else print(False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
